# our-fitness-gal-backend

./: .env.example  Cargo.toml  diesel.toml  docker-compose.yml
migrations/2025-03-02-195210_create_users/: up.sql
src/: auth.rs  main.rs  models.rs  schema.rs  utils.rs
src/routes/: auth.rs
